--- a/BC42_JS4_Trịnh Ngọc Dung (2)/.vscode/BT4_2.html
+++ b/BC42_JS4_Trịnh Ngọc Dung (2)/.vscode/BT4_2.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BÀI TẬP BUỔI 5</title>
+  <title>BÀI TẬP THÊM BUỔI 4</title>
 </head>
 
 <body>
-  <h1>BÀI TẬP JS 5 </h1>
+  <h1>BÀI TẬP JS 4_2 </h1>
   <h2>Bài 1</h2>
   <p>Nhập vào ngày, tháng, năm:</p>
   <form>
@@ -17,8 +17,8 @@
     <input id="month" type="number" placeholder="tháng">
     <input id="year" type="number" placeholder="năm">
   </form>
-  <button id="ex1">Kết quả</button>
-  <script src="./BT5.js"></script>
+  <button onclick="ex1()" id="result1">Kết quả</button>
+  <script src="./BT4_2.js"></script>
 </body>
 
 </html>
