--- a/BC42_JS4_Trịnh Ngọc Dung (2)/.vscode/BT4_2.html
+++ b/BC42_JS4_Trịnh Ngọc Dung (2)/.vscode/BT4_2.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>BÀI TẬP JS 4_2 </h1>
+  <!-- Bài 1 -->
   <h2>Bài 1</h2>
   <p>Nhập vào ngày, tháng, năm:</p>
   <form>
@@ -17,7 +18,18 @@
     <input id="month" type="number" placeholder="tháng">
     <input id="year" type="number" placeholder="năm">
   </form>
-  <button onclick="ex1()" id="result1">Kết quả</button>
+  <button onclick="ex1_1(),ex1_2()">Kết quả</button>
+  <p id="result1_1"></p>
+  <p id="result1_2"></p>
+  <!-- Bài 2-->
+  <h2>Bài 2</h2>
+  <p>Nhập vào tháng, năm:</p>
+  <form>
+    <input id="month2" type="number" placeholder="tháng">
+    <input id="year2" type="number" placeholder="năm">
+  </form>
+  <button onclick="ex2()">Kết quả</button>
+  <p id="result1_3"></p>
   <script src="./BT4_2.js"></script>
 </body>
 
