--- a/BC42_JS4_Trịnh Ngọc Dung (2)/.vscode/BT4_2.html
+++ b/BC42_JS4_Trịnh Ngọc Dung (2)/.vscode/BT4_2.html
@@ -29,7 +29,43 @@
     <input id="year2" type="number" placeholder="năm">
   </form>
   <button onclick="ex2()">Kết quả</button>
-  <p id="result1_3"></p>
+  <p id="result2"></p>
+  <!-- Bài 3 -->
+  <h2>Bài 3</h2>
+  <label for="num">Nhập vào số nguyên có 3 chữ số</label>
+  <form>
+    <input id="num" type="number">
+  </form>
+  <button onclick="ex3()">Kết quả</button>
+  <p id="result3"></p>
+
+  <!-- Bài 4 -->
+  <h2>Bài 4</h2>
+  <label for="stu1">Sinh viên 1</label>
+  <form>
+    <input id="stu1" type="text" placeholder="Nhập tên">
+    <input id="x1" type="number" placeholder="Tọa độ x">
+    <input id="y1" type="number" placeholder="Tọa độ y">
+  </form>
+  <label for="stu2">Sinh viên 2</label>
+  <form>
+    <input id="stu2" type="text" placeholder="Nhập tên">
+    <input id="x2" type="number" placeholder="Tọa độ x">
+    <input id="y2" type="number" placeholder="Tọa độ y">
+  </form>
+  <label for="stu3">Sinh viên 3</label>
+  <form>
+    <input id="stu3" type="text" placeholder="Nhập tên">
+    <input id="x3" type="number" placeholder="Tọa độ x">
+    <input id="y3" type="number" placeholder="Tọa độ y">
+  </form>
+  <p>Trường học</p>
+  <form>
+    <input id="xSchool" type="number" placeholder="Tọa độ x">
+    <input id="ySchool" type="number" placeholder="Tọa độ y">
+  </form>
+  <button onclick="ex4()">Kết quả</button>
+  <p id="result4"></p>
   <script src="./BT4_2.js"></script>
 </body>
 
