--- a/BC42_JS6_Trịnh Ngọc Dung/BT6.html
+++ b/BC42_JS6_Trịnh Ngọc Dung/BT6.html
@@ -18,8 +18,24 @@
   <p id="ex1"></p>
   <!--  BÀI 2 -->
   <h2>Bài 2</h2>
+  <form>
+    <label for="num1">Nhập số x</label>
+    <input type="number" id="num1">
+    <br>
+    <label for="num2">Nhập số n (n>0)</label>
+    <input type="number" id="num2">
+  </form>
   <button onclick="result2()">Kết quả</button>
   <p id="ex2"></p>
+  <!-- BÀI 3 -->
+  <h2>Bài 3</h2>
+  <br>
+  <form>
+    <label for="num3">Nhập số n</label>
+    <input type="number" id="num3">
+  </form>
+  <button onclick="result3()">Kết quả</button>
+  <p id="ex3"></p>
 
   <script src=" ./BT6.js"></script>
 </body>
