--- a/BC42_JS6_Trịnh Ngọc Dung/BT6.html
+++ b/BC42_JS6_Trịnh Ngọc Dung/BT6.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    div {
+      padding: 10px;
+      margin: 5px;
+    }
+  </style>
   <title>Bài tập JS 6</title>
 </head>
 
@@ -19,10 +25,10 @@
   <!--  BÀI 2 -->
   <h2>Bài 2</h2>
   <form>
-    <label for="num1">Nhập số x</label>
+    <label for="num1">Nhập số x:</label>
     <input type="number" id="num1">
     <br>
-    <label for="num2">Nhập số n (n>0)</label>
+    <label for="num2">Nhập số n (n>0):</label>
     <input type="number" id="num2">
   </form>
   <button onclick="result2()">Kết quả</button>
@@ -31,11 +37,23 @@
   <h2>Bài 3</h2>
   <br>
   <form>
-    <label for="num3">Nhập số n</label>
+    <label for="num3">Nhập số n:</label>
     <input type="number" id="num3">
   </form>
   <button onclick="result3()">Kết quả</button>
   <p id="ex3"></p>
+  <!-- BÀI 4 -->
+  <button onclick="result4()">Kết quả</button>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
 
   <script src=" ./BT6.js"></script>
 </body>
