--- a/BC42_JS6_Trịnh Ngọc Dung/BT6.html
+++ b/BC42_JS6_Trịnh Ngọc Dung/BT6.html
@@ -43,6 +43,7 @@
   <button onclick="result3()">Kết quả</button>
   <p id="ex3"></p>
   <!-- BÀI 4 -->
+  <h2>Bài 4</h2>
   <button onclick="result4()">Kết quả</button>
   <div></div>
   <div></div>
