--- a/BC42_JS6_Trịnh Ngọc Dung(2)/BT6_2.html
+++ b/BC42_JS6_Trịnh Ngọc Dung(2)/BT6_2.html
@@ -2,42 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bài tập JS</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BÀI TẬP JS</title>
 </head>
 
 <body>
-  <!-- BÀI 1 -->
-  <h1>Bài tập JS buổi 5_2</h1>
-  <h2>Bài 1</h2>
   <form>
-    <label for="name">Họ và tên</label>
-    <input id="name" type="text" placeholder="Nhập họ tên"> <br><br>
-    <label for="perIn">Tổng thu nhập cá nhân (VNĐ)</label>
-    <input id="perIn" type="number" placeholder="Tổng thu nhập (VNĐ)">
-    <br><br>
-    <label for="staff">Số người phụ thuộc</label>
-    <input id="staff" type="number" placeholder="Số người phụ thuộc">
+    Nhập số: <input type="text" id="number" />
+    <input type="button" value="In kết quả" onclick="print()" />
   </form>
   <br>
-  <button onclick="result1()">Kết quả</button>
-  <p id="ex1"></p>
-  <!--  BÀI 2 -->
-  <h2>Bài 2</h2>
-  <select id="user">
-    <option value="">Chọn khách hàng</option>
-    <option value="company">Doanh nghiệp</option>
-    <option value="home">Nhà dân</option>
-  </select>
-  <form id="form">
-    <input type="text" placeholder="Mã khách hàng" id="customerId">
-    <input type="number" placeholder="Số kênh cao cấp" id="chanelId">
-  </form>
-  <button onclick="result2()">Kết quả</button>
-  <p id="ex2"></p>
-  <script src=" ./BT5_2.js"></script>
+  <span>Các số nguyên tố gồm:</span>
+  <span id="result"></span>
+  <script src="./BT6_2.js"></script>
 </body>
 
 </html>
